# macsima_qc

./: CITATION.cff  CONTRIBUTING.md  LICENSE  README.md  gitignore  macsiq_param_suggestions.csv  pyproject.toml  segmentation_test_annotated.csv
.github/workflows/: tests.yml
macsima_qc/: __init__.py  comparison.py  masks.py  qc.py  utils.py
macsima_qc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_macsima_qc.py
