[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "macsima-qc"
version = "0.1.0"
description = "Quality control pipeline for MACSima / MACSiQView cell segmentation"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Mathis Bouvet" }
]
keywords = ["microscopy", "segmentation", "MACSima", "bioimaging", "quality-control", "immunofluorescence"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Image Processing",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.23",
    "opencv-python>=4.7",
    "matplotlib>=3.6",
    "scikit-image>=0.20",
    "read-roi>=1.6",
    "pandas>=1.5",
    "scikit-learn>=1.2",
    "scipy>=1.10",
    "seaborn>=0.12",
]

[project.urls]
Homepage = "https://github.com/mathisbouvet/MACSima_Advanced-Spatial-Omics-Pipeline"
Repository = "https://github.com/mathisbouvet/MACSima_Advanced-Spatial-Omics-Pipeline"

[tool.setuptools.packages.find]
where = ["."]
include = ["macsima_qc*"]

[tool.setuptools.package-data]
"macsima_qc.data" = ["*.csv"]